--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
         <div class="container">
           <label><b>Username</b></label>
-          <!-- <input type="text" placeholder="Enter Username" name="uname" id="uname" required>-->
-          <select id="selectTeam">
+          <input type="text" placeholder="Enter Username" name="uname" id="uname" required>
+          <!-- <select id="selectTeam">
             <option>Choose a Team...</option>
-          </select>
+          </select> -->
 
           <label><b>Password</b></label>
           <input type="password" placeholder="Enter Password" name="psw" id="pwd" required>
