--- a/userprofile.html
+++ b/userprofile.html
@@ -34,7 +34,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li><img id="team_logo" src="images/brooklyn_nets.png" alt="Brooklyn Nets" height="40" width="40"> </li>
-            <li class="active"><a href="dashboard.html">Home<span class="sr-only">(current)</span></a></li>
+            <li><a href="dashboard.html">Home<span class="sr-only">(current)</span></a></li>
             <li><a href="http://championsimleague.com" target="_blank">Forums</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actions<span class="caret"></span></a>
@@ -48,7 +48,7 @@
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="userprofile.html">User Profile</a></li>
+            <li class="active"><a href="#">User Profile</a></li>
             </li>
           </ul>
         </div><!-- /.navbar-collapse -->
