Cleaning up some unneeded stuff.

--- a/login.html
+++ b/login.html
@@ -5,12 +5,8 @@
 
 <!--
     Bootstrap
-    Bootstrap Slider - Adds sliders to Strategies
-    Bootstrap Toggle - Adds toggle to Admin - Prediction Forms
 -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.0.2/css/bootstrap-slider.min.css">
-<link rel="stylesheet" href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -79,7 +75,7 @@ img.logo2{width:80px;height:80px;}
   <div class="container">
     <div class="row" style="margin-top:20px;">
       <div class="col-xs-3"></div>
-      <form class="form-horizontal col-xs-6" action="/checklogin.php" method="POST">
+      <form class="form-horizontal col-xs-6">
         <div class="panel panel-primary">
           <div class="panel-heading">CSL Scouting Tool Login</div>
           <div class="panel-body">
