Working on login credentials.

--- a/login.html
+++ b/login.html
@@ -85,16 +85,16 @@ img.logo2{width:80px;height:80px;}
             <div class="form-group">
               <label class="control-label col-sm-4" for="user"><b>Username:</b></label>
               <div class="col-sm-4">
-                <input type="text" placeholder="Enter Username" name="user" class="form-control">
+                <input type="text" placeholder="Enter Username" id="user" name="user" class="form-control">
               </div>
             </div>
             <div class="form-group">
               <label class="control-label col-sm-4" for="password"><b>Password:</b></label>
               <div class="col-sm-4">
-                <input type="password" placeholder="Enter Password" name="password" class="form-control" required>
+                <input type="password" placeholder="Enter Password" id="password" name="password" class="form-control" required>
               </div>
             </div>
-            <button type="submit" class="btn btn-login btn-block btn-primary" id="login"><span class="glyphicon glyphicon-off"></span>Login</button>
+            <button type="submit" class="btn btn-login btn-block btn-primary" id="login"></span>Login</button>
           </div>
           <div class="panel-footer">
             <div class='footer' width='90%'><center><p>&copy; Copyright 2018.  All Rights Reserved.</p></div>
